; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_nand_ecc.c_main.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_nand_ecc.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"e:o:p:\00", align 1
@optarg = common dso_local global i32 0, align 4
@page_size = common dso_local global i32 0, align 4
@oob_size = common dso_local global i8* null, align 8
@ecc_offset = common dso_local global i32 0, align 4
@optind = common dso_local global i64 0, align 8
@O_RDONLY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"open input file\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [17 x i8] c"open output file\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32* null, i32** %6, align 8
  store i32 -1, i32* %8, align 4
  store i32 -1, i32* %9, align 4
  store i32 1, i32* %10, align 4
  br label %14

14:                                               ; preds = %37, %2
  %15 = load i32, i32* %4, align 4
  %16 = load i8**, i8*** %5, align 8
  %17 = call i32 @getopt(i32 %15, i8** %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 %17, i32* %12, align 4
  %18 = icmp ne i32 %17, -1
  br i1 %18, label %19, label %38

19:                                               ; preds = %14
  %20 = load i32, i32* %12, align 4
  switch i32 %20, label %32 [
    i32 112, label %21
    i32 111, label %25
    i32 101, label %28
  ]

21:                                               ; preds = %19
  %22 = load i32, i32* @optarg, align 4
  %23 = call i8* @strtoul(i32 %22, i32* null, i32 0)
  %24 = ptrtoint i8* %23 to i32
  store i32 %24, i32* @page_size, align 4
  br label %37

25:                                               ; preds = %19
  %26 = load i32, i32* @optarg, align 4
  %27 = call i8* @strtoul(i32 %26, i32* null, i32 0)
  store i8* %27, i8** @oob_size, align 8
  br label %37

28:                                               ; preds = %19
  %29 = load i32, i32* @optarg, align 4
  %30 = call i8* @strtoul(i32 %29, i32* null, i32 0)
  %31 = ptrtoint i8* %30 to i32
  store i32 %31, i32* @ecc_offset, align 4
  br label %37

32:                                               ; preds = %19
  %33 = load i8**, i8*** %5, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 0
  %35 = load i8*, i8** %34, align 8
  %36 = call i32 @usage(i8* %35)
  br label %37

37:                                               ; preds = %32, %28, %25, %21
  br label %14

38:                                               ; preds = %14
  %39 = load i64, i64* @optind, align 8
  %40 = load i32, i32* %4, align 4
  %41 = sext i32 %40 to i64
  %42 = sub nsw i64 %41, %39
  %43 = trunc i64 %42 to i32
  store i32 %43, i32* %4, align 4
  %44 = load i32, i32* %4, align 4
  %45 = icmp slt i32 %44, 2
  br i1 %45, label %46, label %51

46:                                               ; preds = %38
  %47 = load i8**, i8*** %5, align 8
  %48 = getelementptr inbounds i8*, i8** %47, i64 0
  %49 = load i8*, i8** %48, align 8
  %50 = call i32 @usage(i8* %49)
  br label %51

51:                                               ; preds = %46, %38
  %52 = load i64, i64* @optind, align 8
  %53 = load i8**, i8*** %5, align 8
  %54 = getelementptr inbounds i8*, i8** %53, i64 %52
  store i8** %54, i8*** %5, align 8
  %55 = load i8**, i8*** %5, align 8
  %56 = getelementptr inbounds i8*, i8** %55, i64 0
  %57 = load i8*, i8** %56, align 8
  %58 = load i32, i32* @O_RDONLY, align 4
  %59 = call i32 @open(i8* %57, i32 %58, i32 0)
  store i32 %59, i32* %8, align 4
  %60 = load i32, i32* %8, align 4
  %61 = icmp slt i32 %60, 0
  br i1 %61, label %62, label %64

62:                                               ; preds = %51
  %63 = call i32 @perror(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  br label %126

64:                                               ; preds = %51
  %65 = load i8**, i8*** %5, align 8
  %66 = getelementptr inbounds i8*, i8** %65, i64 1
  %67 = load i8*, i8** %66, align 8
  %68 = load i32, i32* @O_WRONLY, align 4
  %69 = load i32, i32* @O_CREAT, align 4
  %70 = or i32 %68, %69
  %71 = load i32, i32* @O_TRUNC, align 4
  %72 = or i32 %70, %71
  %73 = call i32 @open(i8* %67, i32 %72, i32 420)
  store i32 %73, i32* %9, align 4
  %74 = load i32, i32* %9, align 4
  %75 = icmp slt i32 %74, 0
  br i1 %75, label %76, label %78

76:                                               ; preds = %64
  %77 = call i32 @perror(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  br label %126

78:                                               ; preds = %64
  %79 = load i32, i32* @page_size, align 4
  %80 = load i8*, i8** @oob_size, align 8
  %81 = sext i32 %79 to i64
  %82 = getelementptr i8, i8* %80, i64 %81
  %83 = call i32* @malloc(i8* %82)
  store i32* %83, i32** %6, align 8
  br label %84

84:                                               ; preds = %117, %78
  %85 = load i32, i32* %8, align 4
  %86 = load i32*, i32** %6, align 8
  %87 = load i32, i32* @page_size, align 4
  %88 = call i32 @read(i32 %85, i32* %86, i32 %87)
  store i32 %88, i32* %11, align 4
  %89 = load i32, i32* @page_size, align 4
  %90 = icmp eq i32 %88, %89
  br i1 %90, label %91, label %125

91:                                               ; preds = %84
  %92 = load i32*, i32** %6, align 8
  %93 = load i32, i32* @page_size, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i32, i32* %92, i64 %94
  %96 = load i32, i32* @ecc_offset, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds i32, i32* %95, i64 %97
  store i32* %98, i32** %7, align 8
  store i32 0, i32* %13, align 4
  br label %99

99:                                               ; preds = %114, %91
  %100 = load i32, i32* %13, align 4
  %101 = load i32, i32* @page_size, align 4
  %102 = sdiv i32 %101, 256
  %103 = icmp slt i32 %100, %102
  br i1 %103, label %104, label %117

104:                                              ; preds = %99
  %105 = load i32*, i32** %6, align 8
  %106 = load i32, i32* %13, align 4
  %107 = mul nsw i32 %106, 256
  %108 = sext i32 %107 to i64
  %109 = getelementptr inbounds i32, i32* %105, i64 %108
  %110 = load i32*, i32** %7, align 8
  %111 = call i32 @nand_calculate_ecc(i32* %109, i32* %110)
  %112 = load i32*, i32** %7, align 8
  %113 = getelementptr inbounds i32, i32* %112, i64 3
  store i32* %113, i32** %7, align 8
  br label %114

114:                                              ; preds = %104
  %115 = load i32, i32* %13, align 4
  %116 = add nsw i32 %115, 1
  store i32 %116, i32* %13, align 4
  br label %99

117:                                              ; preds = %99
  %118 = load i32, i32* %9, align 4
  %119 = load i32*, i32** %6, align 8
  %120 = load i32, i32* @page_size, align 4
  %121 = load i8*, i8** @oob_size, align 8
  %122 = sext i32 %120 to i64
  %123 = getelementptr i8, i8* %121, i64 %122
  %124 = call i32 @write(i32 %118, i32* %119, i8* %123)
  br label %84

125:                                              ; preds = %84
  store i32 0, i32* %10, align 4
  br label %126

126:                                              ; preds = %125, %76, %62
  %127 = load i32, i32* %8, align 4
  %128 = icmp sge i32 %127, 0
  br i1 %128, label %129, label %132

129:                                              ; preds = %126
  %130 = load i32, i32* %8, align 4
  %131 = call i32 @close(i32 %130)
  br label %132

132:                                              ; preds = %129, %126
  %133 = load i32, i32* %9, align 4
  %134 = icmp sge i32 %133, 0
  br i1 %134, label %135, label %138

135:                                              ; preds = %132
  %136 = load i32, i32* %9, align 4
  %137 = call i32 @close(i32 %136)
  br label %138

138:                                              ; preds = %135, %132
  %139 = load i32*, i32** %6, align 8
  %140 = icmp ne i32* %139, null
  br i1 %140, label %141, label %144

141:                                              ; preds = %138
  %142 = load i32*, i32** %6, align 8
  %143 = call i32 @free(i32* %142)
  br label %144

144:                                              ; preds = %141, %138
  %145 = load i32, i32* %10, align 4
  ret i32 %145
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i8* @strtoul(i32, i32*, i32) #1

declare dso_local i32 @usage(i8*) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32* @malloc(i8*) #1

declare dso_local i32 @read(i32, i32*, i32) #1

declare dso_local i32 @nand_calculate_ecc(i32*, i32*) #1

declare dso_local i32 @write(i32, i32*, i8*) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
